--- a/shell/package.json
+++ b/shell/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "7.13.13",
     "babel-loader": "8.2.2",
     "html-webpack-plugin": "5.3.1",
+    "msw": "^0.28.2",
     "serve": "11.3.2",
     "webpack": "5.33.2",
     "webpack-cli": "4.6.0",
@@ -19,7 +20,10 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
