--- a/shell/package.json
+++ b/shell/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@babel/core": "7.13.15",
     "@babel/preset-react": "7.13.13",
+    "@mswjs/data": "^0.3.0",
     "babel-loader": "8.2.2",
     "html-webpack-plugin": "5.3.1",
     "msw": "^0.28.2",
