--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "@dynamic-remotes/shell",
+  "name": "@dynamic-remotes/api",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
     "@babel/core": "7.13.15",
     "@babel/preset-react": "7.13.13",
-    "@mswjs/data": "^0.3.0",
     "babel-loader": "8.2.2",
     "html-webpack-plugin": "5.3.1",
-    "msw": "^0.28.2",
     "serve": "11.3.2",
     "webpack": "5.33.2",
     "webpack-cli": "4.6.0",
@@ -17,11 +15,15 @@
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack --mode production",
-    "serve": "serve dist -p 3001",
+    "serve": "serve dist -p 3004",
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "moment": "^2.24.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
