--- a/config/package.json
+++ b/config/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "7.13.15",
+    "@babel/plugin-syntax-top-level-await": "^7.12.13",
     "@babel/preset-react": "7.13.13",
     "@mswjs/data": "^0.3.0",
     "babel-loader": "8.2.2",
