--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "husky": "4.3.8",
     "jest": "26.6.3",
     "lerna": "3.22.1",
-    "prettier": "2.2.1",
-    "pretty-quick": "3.1.0"
+    "prettier": "2.2.1"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
