rename app2 and app3 to feature1 and feature2

--- a/feature1/package.json
+++ b/feature1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dynamic-remotes/app3",
+  "name": "@dynamic-remotes/feature1",
   "version": "0.0.0",
   "private": true,
   "devDependencies": {
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack --mode production",
-    "serve": "serve dist -p 3003",
+    "serve": "serve dist -p 3002",
     "clean": "rm -rf dist"
   },
   "dependencies": {
